// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Toggle /> should render with selected 1`] = `
<DocumentFragment>
  <div
    class="sg-1a4ev5x-toggle"
  >
    <span
      class="sg-11pywio-label-closed"
    >
      somelabel
    </span>
    <span
      class="sg-guvefl-selected"
    >
      Some, Thing, Selected
    </span>
  </div>
</DocumentFragment>
`;

exports[`<Toggle /> should render with selected as open 1`] = `
<DocumentFragment>
  <div
    class="sg-1a4ev5x-toggle"
  >
    <span
      class="sg-14gm6rw-label-open"
    >
      somelabel
    </span>
    <span
      class="sg-guvefl-selected"
    >
      Some, Thing, Selected
    </span>
  </div>
</DocumentFragment>
`;

exports[`<Toggle /> should render without selected 1`] = `
<DocumentFragment>
  <div
    class="sg-1a4ev5x-toggle"
  >
    <span
      class="sg-11pywio-label-closed"
    >
      somelabel
    </span>
  </div>
</DocumentFragment>
`;

exports[`<Toggle /> should render without selected as open 1`] = `
<DocumentFragment>
  <div
    class="sg-1a4ev5x-toggle"
  >
    <span
      class="sg-14gm6rw-label-open"
    >
      somelabel
    </span>
  </div>
</DocumentFragment>
`;
